Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@
 <p><img src="https://raw.github.com/xaviermichel/simple-ged/master/screenshot/add_doc.png" alt="Ajout d'un document"></p>
 
 <p><img src="https://raw.github.com/xaviermichel/simple-ged/master/screenshot/plugins.png" alt="Configuration de plugins"></p>
+
+<h1>
+<a name="plugins" class="anchor" href="#plugins"><span class="octicon octicon-link"></span></a>Plugins</h1>
+
+<h2>
+<a name="orange" class="anchor" href="#orange"><span class="octicon octicon-link"></span></a>Orange</h2>
+
+<p><a href="http://master.dl.sourceforge.net/project/simpleged/plugins/orange-mobile/orange-ged-plugin-1.3-jar-with-dependencies.jar">Plugin mobile</a></p>
+
+<h2>
+<a name="sfr" class="anchor" href="#sfr"><span class="octicon octicon-link"></span></a>SFR</h2>
+
+<p><a href="http://master.dl.sourceforge.net/project/simpleged/plugins/sfr-box/sfr-box-plugin-1.0-jar-with-dependencies.jar">Plugin box</a></p>
+
+<p><a href="http://master.dl.sourceforge.net/project/simpleged/plugins/sfr-mobile/sfr-mobile-plugin-1.0-jar-with-dependencies.jar">Plugin mobile</a></p>
       </section>
     </div>
 
