--- a/index.html
+++ b/index.html
@@ -31,10 +31,33 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a name="simple-ged" class="anchor" href="#simple-ged"><span class="octicon octicon-link"></span></a>Simple GED</h1>
+        <p><em>Simple Ged est un logiciel de GED simplifié à destination des particuliers (comme moi :) ). Pour plus de détails, voir <a href="http://www.xaviermichel.info/tips/read/17/Simple-GED-logiciel-open-source-de-gestion-lectronique-de-documents">http://www.xaviermichel.info/tips/read/17/Simple-GED-logiciel-open-source-de-gestion-lectronique-de-documents</a></em></p>
 
-<p>Simple Ged est un logiciel de GED simplifié à destination des particuliers (comme moi :) ). Pour plus de détails, voir <a href="http://www.xaviermichel.info/tips/read/17/Simple-GED-logiciel-open-source-de-gestion-lectronique-de-documents">http://www.xaviermichel.info/tips/read/17/Simple-GED-logiciel-open-source-de-gestion-lectronique-de-documents</a></p>
+<h1>
+<a name="tlchargements" class="anchor" href="#tlchargements"><span class="octicon octicon-link"></span></a>Téléchargements</h1>
+
+<h2>
+<a name="logiciel" class="anchor" href="#logiciel"><span class="octicon octicon-link"></span></a>Logiciel</h2>
+
+<p>A définir (pour l'instant, voir <a href="http://www.xaviermichel.info/tips/read/17/Simple-GED-logiciel-open-source-de-gestion-lectronique-de-documents">http://www.xaviermichel.info/tips/read/17/Simple-GED-logiciel-open-source-de-gestion-lectronique-de-documents</a>)</p>
+
+<h2>
+<a name="plugins" class="anchor" href="#plugins"><span class="octicon octicon-link"></span></a>Plugins</h2>
+
+<h3>
+<a name="orange" class="anchor" href="#orange"><span class="octicon octicon-link"></span></a>Orange</h3>
+
+<p><a href="http://master.dl.sourceforge.net/project/simpleged/plugins/orange-mobile/orange-ged-plugin-1.3-jar-with-dependencies.jar">Plugin mobile</a></p>
+
+<h3>
+<a name="sfr" class="anchor" href="#sfr"><span class="octicon octicon-link"></span></a>SFR</h3>
+
+<p><a href="http://master.dl.sourceforge.net/project/simpleged/plugins/sfr-box/sfr-box-plugin-1.0-jar-with-dependencies.jar">Plugin box</a></p>
+
+<p><a href="http://master.dl.sourceforge.net/project/simpleged/plugins/sfr-mobile/sfr-mobile-plugin-1.0-jar-with-dependencies.jar">Plugin mobile</a></p>
+
+<h1>
+<a name="captures-dcran" class="anchor" href="#captures-dcran"><span class="octicon octicon-link"></span></a>Captures d'écran</h1>
 
 <p><img src="https://raw.github.com/xaviermichel/simple-ged/master/screenshot/home.png" alt="Ecran d'accueil"></p>
 
@@ -45,21 +68,6 @@
 <p><img src="https://raw.github.com/xaviermichel/simple-ged/master/screenshot/add_doc.png" alt="Ajout d'un document"></p>
 
 <p><img src="https://raw.github.com/xaviermichel/simple-ged/master/screenshot/plugins.png" alt="Configuration de plugins"></p>
-
-<h1>
-<a name="plugins" class="anchor" href="#plugins"><span class="octicon octicon-link"></span></a>Plugins</h1>
-
-<h2>
-<a name="orange" class="anchor" href="#orange"><span class="octicon octicon-link"></span></a>Orange</h2>
-
-<p><a href="http://master.dl.sourceforge.net/project/simpleged/plugins/orange-mobile/orange-ged-plugin-1.3-jar-with-dependencies.jar">Plugin mobile</a></p>
-
-<h2>
-<a name="sfr" class="anchor" href="#sfr"><span class="octicon octicon-link"></span></a>SFR</h2>
-
-<p><a href="http://master.dl.sourceforge.net/project/simpleged/plugins/sfr-box/sfr-box-plugin-1.0-jar-with-dependencies.jar">Plugin box</a></p>
-
-<p><a href="http://master.dl.sourceforge.net/project/simpleged/plugins/sfr-mobile/sfr-mobile-plugin-1.0-jar-with-dependencies.jar">Plugin mobile</a></p>
       </section>
     </div>
 
