--- a/ged-core/src/main/resources/html/message-head.html
+++ b/ged-core/src/main/resources/html/message-head.html
@@ -10,11 +10,14 @@
 				margin-bottom:30px;
 				border-radius:6px;
 			}
+            ul {
+                margin-top : 10px;
+            }
 			h1{
 				margin-bottom:0;
 				font-size:60px;
 				line-height:1;
-				color:inherit;
+				/*color:inherit;*/
 				letter-spacing:-1px;
 			}
 			hr{
@@ -39,25 +42,25 @@
 			.alert {
 				padding: 8px 35px 8px 14px;
 				margin-bottom: 20px;
-				color: #c09853;
+				/*color: #c09853;*/
 				text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 				background-color: #fcf8e3;
 				border: 1px solid #fbeed5;
 				border-radius: 4px;
 			}
 			.alert-success {
-				color: #468847;
+				/*color: #468847;*/
 				background-color: #dff0d8;
 				border-color: #d6e9c6;
 			}
 			.alert-danger,
 			.alert-error {
-				color: #b94a48;
+				/*color: #b94a48;*/
 				background-color: #f2dede;
 				border-color: #eed3d7;
 			}
 			.alert-info {
-				color: #3a87ad;
+				/*color: #3a87ad;*/
 				background-color: #d9edf7;
 				border-color: #bce8f1;
 			}
