Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,10 +39,12 @@
 <h2>
 <a name="logiciel" class="anchor" href="#logiciel"><span class="octicon octicon-link"></span></a>Logiciel</h2>
 
-<p>A définir (pour l'instant, voir <a href="http://www.xaviermichel.info/tips/read/17/Simple-GED-logiciel-open-source-de-gestion-lectronique-de-documents">http://www.xaviermichel.info/tips/read/17/Simple-GED-logiciel-open-source-de-gestion-lectronique-de-documents</a>)</p>
+<p><a href="http://sourceforge.net/projects/simpleged/files/latest/download">Télécharger simple ged</a>. Voir le <a href="https://github.com/xaviermichel/simple-ged/wiki/Comment-installer-simple-ged">wiki pour l'installation</a>.</p>
 
 <h2>
 <a name="plugins" class="anchor" href="#plugins"><span class="octicon octicon-link"></span></a>Plugins</h2>
+
+<p><em>Une fois le plugin téléchargé, voir <a href="https://github.com/xaviermichel/simple-ged/wiki/Comment-installer-un-plugin">comment installer un plugin</a>.</em></p>
 
 <h3>
 <a name="orange" class="anchor" href="#orange"><span class="octicon octicon-link"></span></a>Orange</h3>
